<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_playing"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/nav_playing" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_restore_black_24dp"
            android:title="@string/nav_recent" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/nav_genre" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_artists" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_queue_music_black_24dp"
            android:title="@string/nav_playlist" />
    </group>

</menu>
